RESOLVED FIXED303142
AX: With the AccessibilityTextStitchingEnabled feature, aria-owns does not break text stitch groups, causing a confusing experience
https://bugs.webkit.org/show_bug.cgi?id=303142
Summary AX: With the AccessibilityTextStitchingEnabled feature, aria-owns does not br...
Tyler Wilcock
Reported 2025-11-26 07:53:16 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-26 07:53:24 PST
Tyler Wilcock
Comment 2 2025-12-01 13:37:13 PST
EWS
Comment 3 2025-12-02 08:27:49 PST
Committed 303758@main (37fb4cab56c5): <https://commits.webkit.org/303758@main> Reviewed commits have been landed. Closing PR #54657 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.