Source/WebCore/accessibility/AXStitchUtilities.h
@@ -30,9 +30,12 @@ namespace WebCore {
 class RenderObject;
 
 struct StitchingContext {
+    explicit StitchingContext(const AccessibilityNodeObject&);
+
     RefPtr<ContainerNode> lastStitchBreakingAncestor { nullptr };
+    RefPtr<const AccessibilityNodeObject> containingBlockFlowObject { nullptr };
 };
 
-bool shouldStopStitchingAt(const RenderObject&, StitchingContext&);
+bool shouldStopStitchingAt(const RenderObject&, const AccessibilityObject&, StitchingContext&);
 
 } // namespace WebCore
